--- a/README
+++ b/README
@@ -9,8 +9,7 @@ system. It uses the sshkey[2] package to load the keys.
 The utility is designed for encryption smaller files (under 128M), as the
 file is read into memory.
 
-Password-protected keys aren't yet supported, and only RSA keys are
-supported at this time.
+Password-protected keys are now supported, as are both ECDSA and RSA keys.
 
 
 Usage: sshbox [-ade] [-k key] source target
@@ -29,15 +28,11 @@ Installation:
 
 
 Signatures:
-The "signing" branch includes support RSASSA-PSS signatures; however, this
-is not present as of Go 1.1.1, but it is in tip. Due to the fact that most
-users are not likely to be running tip, I've split this into a separate
-branch. It adds the following flags:
-
-        -s="": SSH private key to sign the message with
-        -v="": SSH public key to validate the signature with.
-
-Once RSASSA-PSS support hits a distribution, I will merge this into master.
+Signature support is standing by, but uses RSASSA-PSS, which is not
+present as of Go 1.1.1, but it is in tip. Due to the fact that most
+users are not likely to be running tip, I've decided to wait to add
+this in until later.  Once RSASSA-PSS support hits a distribution,
+I will merge this into master.
 
 
 License:
